[project]
name = "zernpy"
version = "0.0.12"
authors = [
    {name = "Sergei Klykov"},
    {email = "sergej.klykow@gmail.com"}
]
description = "Calculation of Zernike polynomial value, their sums and basic plotting of their values in polar coordinates"
readme = "README.md"
# license = {file = "LICENSE"}  # includes the whole text in METADATA, maybe not so convienient
license = {text = "MIT"}  # short descriptive name of the used license
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "matplotlib",
]
keywords = ["zernike-polynomials"]

[project.urls]  # METADATA in wheel file will represent the data below by using pip show zernpy -v
# But the the links themselves are mapped / parced by the PyPi website
"Homepage" = "https://pypi.org/project/zernpy/"
"Repository" = "https://github.com/sklykov/zernpy/"
"Bug Tracker" = "https://github.com/sklykov/zernpy/issues/"
"Documentation" = "https://sklykov.github.io/zernpy/"
"Changelog" = "https://github.com/sklykov/zernpy/blob/main/CHANGELOG.md"

# [tool.setuptools]
# include-package-data = true  # true by default

# [tool.setuptools.packages.find]  # Manifest.in file is only required for adding some package-data
# where = ["src"]  # there is no need to specify this here

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
